--- a/package.json
+++ b/package.json
@@ -1,49 +1,43 @@
 {
-  "name": "node-red-contrib-ui-led",
-  "version": "0.4.11",
-  "description": "A simple LED status indicator for the Node-RED Dashboard",
-  "author": "Ian G <yo.ian.g@gmail.com>",
-  "license": "MIT",
-  "node-red": {
-    "nodes": {
-      "ui_led": "./dist/nodes/ui_led/ui_led.js"
-    }
+  "_from": "node-red-contrib-ui-led2@0.4.20",
+  "_id": "node-red-contrib-ui-led2@0.4.20",
+  "_inBundle": false,
+  "_integrity": "sha512-7utTG2vy8uLYhExVJ7Q7VVcs1T/3AIvZJatClwn8URxx6XD+AnMXVLUAWfDr4kau+TNVhCkm+fD+rSWCeOyLAQ==",
+  "_location": "/node-red-contrib-ui-led2",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "node-red-contrib-ui-led2@0.4.20",
+    "name": "node-red-contrib-ui-led2",
+    "escapedName": "node-red-contrib-ui-led2",
+    "rawSpec": "0.4.20",
+    "saveSpec": null,
+    "fetchSpec": "0.4.20"
   },
-  "keywords": [
-    "node-red",
-    "led",
-    "dashboard",
-    "ui"
+  "_requiredBy": [
+    "#USER",
+    "/"
   ],
+  "_resolved": "https://registry.npmjs.org/node-red-contrib-ui-led2/-/node-red-contrib-ui-led2-0.4.20.tgz",
+  "_shasum": "f098458a943bb4c8793e8eecc07aba052b5b1d02",
+  "_spec": "node-red-contrib-ui-led2@0.4.20",
+  "_where": "/home/pi/.node-red",
+  "author": {
+    "name": "Harald L.",
+    "email": "nodered.githubg@hlcsb.de"
+  },
   "bugs": {
-    "url": "https://github.com/Adorkable/node-red-contrib-ui-led/issues"
+    "url": "https://github.com/das399igste/node-red-contrib-ui-led2/issues"
   },
-  "homepage": "https://github.com/Adorkable/node-red-contrib-ui-led",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Adorkable/node-red-contrib-ui-led.git"
-  },
-  "scripts": {
-    "copy": "copyfiles -u 2 \"./src/nodes/**/*.{png,svg}\" \"./dist/nodes/\"",
-    "build:editor": "rollup -c rollup.config.editor.js",
-    "build:editor:watch": "rollup -c rollup.config.editor.js -w",
-    "build:runtime": "tsc -p tsconfig.runtime.json",
-    "build:runtime:watch": "tsc -p tsconfig.runtime.watch.json --watch --preserveWatchOutput",
-    "build": "rm -rf dist && npm run copy && npm run build:editor && npm run build:runtime",
-    "test": "jest --forceExit --detectOpenHandles --colors --passWithNoTests",
-    "test:watch": "jest --forceExit --detectOpenHandles --watchAll --passWithNoTests",
-    "dev": "rm -rf dist && npm run copy && concurrently --kill-others --names 'COPY,EDITOR,RUNTIME,LINT,TEST' --prefix '({name})' --prefix-colors 'greenBright.bold,yellow.bold,cyan.bold,redBright.bold,magenta.bold' 'onchange -v \"src/**/*.png\" \"src/**/*.svg\" -- npm run copy' 'npm run lint:watch' 'npm run build:editor:watch' 'npm run build:runtime:watch' 'sleep 10; npm run test:watch'",
-    "lint": "prettier --ignore-path .eslintignore --check '**/*.{js,ts,md}'; eslint --ext .js,.ts .",
-    "lint:fix": "prettier --ignore-path .eslintignore --write '**/*.{js,ts,md}'; eslint --ext .js,.ts . --fix",
-    "lint:watch": "onchange -v \"**/*.{js,ts,md}\" -- npm run lint",
-    "release": "npm run build && npm publish"
-  },
-  "dependencies": {
-  },
+  "bundleDependencies": false,
+  "dependencies": {},
+  "deprecated": false,
+  "description": "A simple LED status indicator for the Node-RED Dashboard",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.0.0",
     "@types/angular": "^1.8.0",
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.20.9",
     "@types/jest": "^26.0.15",
     "@types/jqueryui": "^1.12.14",
     "@types/node": "^14.14.10",
@@ -72,9 +66,7 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
-  "peerDependencies": {
-    "node-red-dashboard": ">=2.23.3"
-  },
+  "homepage": "https://github.com/das399igste/node-red-contrib-ui-led2",
   "jest": {
     "testEnvironment": "node",
     "roots": [
@@ -87,10 +79,50 @@
       "**/__tests__/**/*.test.ts"
     ]
   },
+  "keywords": [
+    "node-red",
+    "led2",
+    "dashboard",
+    "ui"
+  ],
+  "license": "MIT",
+  "name": "node-red-contrib-ui-led2",
+  "node-red": {
+    "version": ">=3.0.0",
+    "nodes": {
+      "ui_led2": "./dist/nodes/ui_led2/ui_led2.js"
+    }
+  },
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "peerDependencies": {
+    "node-red-dashboard": ">=2.23.3"
+  },
   "prettier": {
     "printWidth": 80,
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/das399igste/node-red-contrib-ui-led2.git"
+  },
+  "scripts": {
+    "build": "rm -rf dist && npm run copy && npm run build:editor && npm run build:runtime",
+    "build:editor": "rollup -c rollup.config.editor.js",
+    "build:editor:watch": "rollup -c rollup.config.editor.js -w",
+    "build:runtime": "tsc -p tsconfig.runtime.json",
+    "build:runtime:watch": "tsc -p tsconfig.runtime.watch.json --watch --preserveWatchOutput",
+    "copy": "copyfiles -u 2 \"./src/nodes/**/*.{png,svg}\" \"./dist/nodes/\"",
+    "dev": "rm -rf dist && npm run copy && concurrently --kill-others --names 'COPY,EDITOR,RUNTIME,LINT,TEST' --prefix '({name})' --prefix-colors 'greenBright.bold,yellow.bold,cyan.bold,redBright.bold,magenta.bold' 'onchange -v \"src/**/*.png\" \"src/**/*.svg\" -- npm run copy' 'npm run lint:watch' 'npm run build:editor:watch' 'npm run build:runtime:watch' 'sleep 10; npm run test:watch'",
+    "lint": "prettier --ignore-path .eslintignore --check '**/*.{js,ts,md}'; eslint --ext .js,.ts .",
+    "lint:fix": "prettier --ignore-path .eslintignore --write '**/*.{js,ts,md}'; eslint --ext .js,.ts . --fix",
+    "lint:watch": "onchange -v \"**/*.{js,ts,md}\" -- npm run lint",
+    "release": "npm run build && npm publish",
+    "test": "jest --forceExit --detectOpenHandles --colors --passWithNoTests",
+    "test:watch": "jest --forceExit --detectOpenHandles --watchAll --passWithNoTests"
+  },
+  "version": "0.4.20"
 }
